--- a/styeles.css
+++ b/styeles.css
@@ -7,6 +7,7 @@ html,body{
     height: 100%;
     width: 100%;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 #main{
     height: 100vh;
@@ -29,7 +30,7 @@ html,body{
 }
 #main h1{
     color: white;
-    font-size: 300px;
+    font-size: 200px;
     text-align: center;
     backdrop-filter: sepia(90%);
     background: transparent;
@@ -53,30 +54,34 @@ html,body{
     text-decoration: none;
 }
 img{
-    width: 100px;
-    height: 100px;
-    margin: 20px;
+    width: 200px;
+    height: 200px;
+    margin: 40px;
 position: absolute;
+background: transparent;
 }
 #first{
-    top: 65%;
-    left: 50%;
+    top: 30%;
+    left: 55%;
     border-radius: 20px;
+    
     
 }
 #second{
     top: 52%;
-    right: 45%;
-    z-index: 1;
+    right: 25%;    
     border-radius: 20px;
+    transform: rotate(-45deg);
+    box-shadow: inset 0 5px 10px #dfd7d7,
+                0 10px 30px #f5efef;
 }
 
 #third{
     top: 55%;
-    right: 35%;
-    z-index: 7;
-    border-radius: 20px;
-
-   
+    right: 15%;  
+    transform: rotate(45deg);
+    border-radius: 20px;  
+    box-shadow: inset 20px 5px 10px #dfd7d7,
+                0 10px 30px #f5efef;
 
 }
